--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,26 @@ jobs:
         uses: actions/download-artifact@v4
       - name: Verify the PDF file with VeraPDF
         run: verify Thesis/*.pdf | tee /dev/stderr | grep -qE 'nonCompliant="0" failedJobs="0"'
+
+  deploy:
+    name: Deploy PDF to gh-pages branch
+    if: github.event_name == 'push' # only deploy on push
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+    steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+      - name: Get the PDF file from the artifact
+        uses: actions/download-artifact@v4
+      - name: Commit the PDF file
+        run: |
+          cp Thesis/*.pdf .
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git add *.pdf
+          git commit --amend --no-edit
+          git push --force
