--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
-# Store demo PDF in LFS (Large File Storage)
-thesis.pdf filter=lfs diff=lfs merge=lfs -text
-
 # Store large files in LFS (Large File Storage)
 figures/large/* filter=lfs diff=lfs merge=lfs -text
+
+# If you decide to store the generated PDF in repository,
+# it is preferred to use LFS (Large File Storage)
+/*.pdf filter=lfs diff=lfs merge=lfs -text
