--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 .aux
 *.synctex.gz
 
+## Since the main PDF file is automatically generated with GitHub Actions
+## and pushed to `gh-pages` branch, is is generally advised to ignore it
+## (which makes the repository smaller and faster to clone)
+/*.pdf
+
 ## LanguageTool
 .ltex
 
