ci(build): change Docker image used for building
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,15 @@ jobs:
   build:
     name: Build PDF and upload as an artifact
     runs-on: ubuntu-latest
-    container: { image: 'aergus/latex' }
     steps:
-      - name: Install git-lfs
-        run: apt-get update && apt-get install -y git-lfs
       - name: Set up Git repository
         uses: actions/checkout@v4
         with:
           lfs: true
-      - name: Build the PDF
-        run: latexmk thesis
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@v3
+        with:
+          root_file: thesis.tex
       - name: Upload the artifact
         uses: actions/upload-artifact@v4
         with:
