ci(build): support building inkscape figures in CI
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
         uses: xu-cheng/latex-action@v3
         with:
           root_file: thesis.tex
+          texlive_version: latest # must be `2024` or later (`latest` chosen by default)
+          extra_system_packages: coreutils icu inkscape # `coreutils` for `mktemp`, `icu` for `uconv`
       - name: Upload the artifact
         uses: actions/upload-artifact@v4
         with:
